--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-sdk/admin": "^1.10.0",
     "@next/bundle-analyzer": "^13.4.6",
     "classnames": "^2.3.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
+    "jsonwebtoken": "^9.0.0",
     "magic-sdk": "^17.4.0",
     "next": "13.4.4",
     "react": "18.2.0",
