--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@magic-sdk/admin": "^1.10.0",
     "@next/bundle-analyzer": "^13.4.6",
     "classnames": "^2.3.2",
+    "cookie": "^0.5.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
